--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
       function getMessages() {
-  fetch('/messenger/messages')  // Replace 'your-repository-name' with your actual repository name
+  fetch('https://leocabs29.github.io/messenger//messages')
     .then(response => {
       if (!response.ok) {
         throw new Error(`Failed to fetch messages: ${response.status} ${response.statusText}`);
